<resources>
    <string name="app_name">Gênesis</string>
    <string name="tensao">TENSÃO (V)</string>
    <string name="corrente">CORRENTE (A)</string>
    <string name="potencia">POTÊNCIA (KW)</string>
    <string name="fator">FATOR DE POTÊNCIA</string>
    <string name="disjuntor">DISJUNTOR</string>
    <string name="Resultado">RESULTADO FINAL</string>
    <string name="distancia">DISTÂNCIA(M)</string>
    <string name="bitola">Diâmetro do condutor (mm²)</string>
    <string name="calcular">CALCULAR</string>
    <string name="voltar">INICIO</string>
    <string name="alu">ALUMÍNIO</string>
    <string name="cu">COBRE</string>
    <string name="mono">UNIPOLAR</string>
    <string name="bi">BIPOLAR</string>
    <string name="texto01">De acordo com a NBR-5410 é permitido no máximo uma queda de tensão de no máximo 3% da tensão nominal de alimentação. Sendo necessário o dimensionamento do
    condutor e disjuntor de proteção de acordo com a tensão minima que o equipamento necessite ao seu funcionamento.</string>
</resources>
