<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.InicioActivity">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tensao"
                android:textColor="@color/letra"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_tensao"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corrente"
                android:textColor="@color/letra"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_corrente"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancia"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:id="@+id/edt_distancia"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="Em metros!!"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:textColor="@color/atencao"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/rad_cobre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/cu"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>
                    <RadioButton
                        android:id="@+id/rad_alum"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/alu"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bitola"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_bitola"
                android:layout_marginStart="5dp"
                android:textColor="@color/atencao"
                android:textSize="18sp"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/common_google_signin_btn_tint"
                android:onClick="calcularDados"
                android:text="@string/calcular"
                android:textColor="@color/perigo"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto01"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/perigo"
            android:layout_marginBottom="20dp"/>

        <ListView
            android:id="@+id/lista_rede"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>
</ScrollView>