<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".view.ResultsActivity">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tensao"
                android:textColor="@color/letra"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_tensaoRes"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/corrente"
                android:textColor="@color/letra"
                android:textSize="18sp"/>
            <EditText
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_correnteRes"
                android:inputType="numberDecimal"
                android:textSize="18sp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distancia"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/letra"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/edt_distanciaRes"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/atencao"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bitola"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_bitolaRes"
                android:layout_marginStart="5dp"
                android:textColor="@color/atencao"
                android:textSize="18sp"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/disjuntor"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/letra"/>
                <EditText
                    android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/edt_disjRes"
                android:layout_marginStart="5dp"
                android:textColor="@color/atencao"
                android:textSize="18sp"
                android:inputType="numberDecimal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_tipoDisj"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:inputType="text"
                    android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potencia"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/letra"/>
            <EditText
                android:id="@+id/edt_potenciaRes"
                android:layout_marginStart="10dp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="18sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Resultado"
                android:textSize="18sp"
                android:textColor="@color/letra"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/edt_queda"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>